feat: assets init
