# backend/src/main/java/com/tribly/enums/AssetType.java
@@ -1,0 +1,12 @@
+package com.tribly.enums;
+
+public enum AssetType {
+  LOGO,
+  IMAGE,
+  VIDEO,
+  ATTACHMENT,
+  TRACK_ORIGINAL_GPX,
+  TRACK_FILTERED_GPX,
+  TRACK_FIT,
+  TRACK_THUMBNAIL
+}
