# contracts/openapi.yaml
@@ -17,6 +17,34 @@ components:
           description: Role to assign (defaults to MEMBER)
           type: string
           $ref: "#/components/schemas/TeamRole"
+    AssetDto:
+      type: object
+      required:
+      - id
+      - type
+      - fileName
+      properties:
+        id:
+          type: string
+          description: ID (TSID)
+        type:
+          description: Type
+          type: string
+          $ref: "#/components/schemas/AssetType"
+        fileName:
+          type: string
+          description: Filename
+    AssetType:
+      type: string
+      enum:
+      - LOGO
+      - IMAGE
+      - VIDEO
+      - ATTACHMENT
+      - TRACK_ORIGINAL_GPX
+      - TRACK_FILTERED_GPX
+      - TRACK_FIT
+      - TRACK_THUMBNAIL
     ClimbCategory:
       type: string
       enum:
@@ -191,6 +219,13 @@ components:
         markdown:
           type: string
           description: Markdown
+        assets:
+          type: array
+          items:
+            $ref: "#/components/schemas/AssetDto"
+          description: Assets
+      required:
+      - assets
     MemberDto:
       description: Team member information
       type: object
